Adding week6 news

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -170,6 +170,166 @@
         </section>
 
 
+        <!--Week 6 -->
+        <section id="week6" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 6</h2> <!-- begin week 2 summary -->
+                            <h4 class="section-title">Styling with Coding!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were excited to welcome back our young coders for a day of review and CSS fun with 
+                    lots of colors, styles, and fonts! 
+                </p>
+                <p>
+                    Before we dive into our fun activities, here's a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Bonus Hour</h4>
+                    <p>
+                        Join us for "bonus hour" every <b>Thursday from 6:00-7:00p ET</b> open to all SGWC
+                        participants. SGWC mentors will be available on Zoom during the bonus hour
+                        to resolve technical difficulties, dive deeper into the coding concepts we've learned,
+                        or to talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour was sent in the welcome email.
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/94658238348">https://msu.zoom.us/j/94658238348</a> (password is provided in the welcome email)</li>
+                    </ul>
+                    <h4>2. Looking Ahead</h4>
+                    <p>
+                        We will <b>not be meeting this week on 3/25</b>. 
+                        We'll see you again on <b>Saturday, 4/1 at 10a ET</b> for our seventh SGWC meeting of the spring,
+                        where we will be working further on exciting final projects!
+                    </p>
+                    <h4>3. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    This week we started off with a game of would you rather in the in-person cohort.
+                </p>
+                <p>
+                    After our icebreaker, we had our spotlight and watched a video on a systems engineer 
+                    who used Firebase to help her community by creating a monitoring system for the detection
+                    of landslides.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-12" align="middle">
+                            <iframe width="400" height="250" src="https://www.youtube.com/embed/h7OEN-MAOog" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <p><i>Meet Adriana Gutierrez, Women Techmakers Ambassador</i></p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We reviewed our last lesson on lists and tables. 
+                    Then, we jumped into our final lesson of the program, on styling our websites using CSS. 
+                    We learned about changing fonts, colors, and other styling elements.
+                </p>
+                <p>
+                    At the end of the lesson, we reintroduced our final project and started brainstorming 
+                    ideas in CodeHS. We gave the students time to work on our CSS exercises and/or brainstorm 
+                    and start the project. Finally, we ended the day with our standup and reflected on 
+                    what we learned about and what challenged us.
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a> and
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon </a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    To continue our mentor spotlight series, we'd like to introduce some Spring 2023 In Person Mentors!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-4" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/EunhyePark.jpg" height="350">
+                            <br><br>
+                            <p><i>Grace Park</i></p>
+                        </div>
+                        <div class="col-md-4" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/IpekBayik.jpg" height="350">
+                            <br><br>
+                            <p><i>Ipek Bayik</i></p>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <!-- mentor QA -->
+                        <div class="col-md-4" align="left"> <!-- Grace -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a third-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                During AP Computer Science class, we coded to make the robots move!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I'm currently making a website in my web development class, and it's really fun 
+                                making the website look how I want it with different html tags, css, and javascript!
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I'm hoping to fix the issues with an application I made for my internship last summer 
+                                and get it working so it can be more useful to the team and their customers. 
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Don't be afraid to fail and make mistakes :&rpar; 
+                            </p>
+                        </div>
+                        <div class="col-md-4" align="left"> <!-- Ipek -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a first-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                Seeing the possibilities of what can be done by computer science in the movies when 
+                                I was in middle school fascinated me!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                Last semester we, as a group, did a LED hat for our EGR 100 class!
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope to code an animal like robot in the future that will teach me how to 
+                                better use hardware and software together.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Don't let your mistakes stop you, they show you the road to success!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Thanks for making last Saturday a blast, everyone. We can't wait to see you in less than two weeks!
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+            </div>
+        </section> <!-- end week 6 summary -->
+
         <!--Week 5 -->
         <section id="week4" class="news bg-white">
             <div class="container">
