--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -190,7 +190,39 @@
                 </p>
                 <h4 class="text-center">Announcements</h4>
                 <ul>
-                    <h4>1. Bonus Hour</h4>
+                    <h4>1. GET-IT Day</h4>
+                    <p>
+                        GET-IT Day is a field trip experience designed specifically for young girls in grades 4-8 
+                        and provides a unique opportunity to learn about the latest technologies and tech concepts 
+                        in an interactive, hands-on environment. <br>
+                    </p>
+                    <p>
+                        With MCWT providing transportation and all necessary materials, students can focus on 
+                        exploring the expo area and participating in engaging activities!
+                        This event will be held on May 16, 2023. 
+                    </p>
+                    <p>
+                        <a href="https://mcwt.org/programs/list/K-12-Initiatives/GIRLS-GET-IT-DAY">Learn more and register here</a>
+                    </p>
+                    <h4>2. MCWT Camp Infinity</h4>
+                    <p>
+                        Coming to a city near you, girls in grades 5-12 are invited to join Camp Infinity and 
+                        discover the exciting world of technology! 
+                        This series of weeklong sessions will introduce the girls to computer and 
+                        internet technologies through hands-on activities.
+                    </p>
+                    <p>
+                        Each week of fun is held on Mondays-Fridays from 8:30 a.m. to 4 p.m. in various 
+                        locations throughout the state. 
+                        The girls will create websites with HTML/CSS, program Ozobot Evo and/or Finch 2.0 robots, 
+                        and learn game design using Epic Games Unreal Engine. 
+                        Expert instructors will guide the students through a range of engaging activities 
+                        that will spark their imagination and creativity.
+                    </p>
+                    <p>
+                        <a href="https://mcwt.org/programs/list/K-12-Initiatives/CAMP-INFINITY">Learn more and register here</a>
+                    </p>
+                    <h4>3. Bonus Hour</h4>
                     <p>
                         Join us for "bonus hour" every <b>Thursday from 6:00-7:00p ET</b> open to all SGWC
                         participants. SGWC mentors will be available on Zoom during the bonus hour
@@ -204,13 +236,13 @@
                     <ul>
                         <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/94658238348">https://msu.zoom.us/j/94658238348</a> (password is provided in the welcome email)</li>
                     </ul>
-                    <h4>2. Looking Ahead</h4>
+                    <h4>4. Looking Ahead</h4>
                     <p>
                         We will <b>not be meeting this week on 3/25</b>. 
                         We'll see you again on <b>Saturday, 4/1 at 10a ET</b> for our seventh SGWC meeting of the spring,
                         where we will be working further on exciting final projects!
                     </p>
-                    <h4>3. Questions?</h4>
+                    <h4>5. Questions?</h4>
                     <p>
                         As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
                     </p>
