--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -161,7 +161,7 @@
 										<!-- advisor photos -->
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/LaurieCSforALL.jpg" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/consueloGodfrey750x1000.jpeg" width=50%>
 												<br>
 												<p><i>Consuelo Godfrey</i></p>
 											</div>
