--- a/belizeweb/SS2023/resources.html
+++ b/belizeweb/SS2023/resources.html
@@ -79,8 +79,14 @@
 										<a href="images/Lessons/05Week5-2.11.23-Green.pdf" target="_blank">06 -  - 2.11.23</a>
 									</li>
 									<li style="list-style: disc;">
-										<a href="images/Lessons/06Week62.25.23Green.pdf" target="_blank">06 -  - 2.11.23</a>
-									</li>				
+										<a href="images/Lessons/06Week62.25.23Green.pdf" target="_blank">07 -  - 2.25.23</a>
+									</li>		
+									<li style="list-style: disc;">
+										<a href="images/Lessons/07green.pdf" target="_blank">08 -  - 3.18.23</a>
+									</li>	
+									<li style="list-style: disc;">
+										<a href="images/Lessons/08green.pdf" target="_blank">09 -  - 3.25.23</a>
+									</li>			
 								</ul>
 							</section>
 
@@ -109,8 +115,13 @@
 										<a href="images/Lessons/05Week5-2.11.23-Blue.pdf" target="_blank">06 -  - 2.11.23</a>
 									</li>
 									<li style="list-style: disc;">
-										<a href="images/Lessons/06Week62.25.23Blue.pdf" target="_blank">06 -  - 2.11.23</a>
+										<a href="images/Lessons/06Week62.25.23Blue.pdf" target="_blank">07 -  - 2.25.23</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="images/Lessons/07blue.pdf" target="_blank">08 -  - 3.18.23</a>
+									</li>	
+									<li style="list-style: disc;">
+										<a href="images/Lessons/08blue.pdf" target="_blank">09 -  - 3.25.23</a>
 
 								
 									
