--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -123,6 +123,9 @@
 									After the icebreaker, we had our amazing spotlight, Camryn Geban, a current student pursuing her Associates degree in Health Science (online) at the University of the People. 
 								   </p>
 
+								   <span class="image main"><img src="images/Image 3-26-23 at 12.17 AM.jpeg" alt=" Camryn Geban"></span>
+
+
 								   <p>
 									Thank you so much for joining us, Camryn!
 								   </p>
@@ -154,7 +157,7 @@
 										spotlight a few of them each week.
 									</p>
 									<p>
-										To continue our spotlight series, we'd like to introduce Consuelo Godfrey
+										To continue our spotlight series, we'd like to introduce a couple of our mentors
 									</p>
 				
 									<!-- mentor photos -->
@@ -163,14 +166,39 @@
 										<!-- advisor photos -->
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/consueloGodfrey750x1000.jpeg" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/emily750x1000_78R.jpg" width=50%>
 												<br>
-												<p><i>Consuelo Godfrey</i></p>
+												<p><i>Emily Goldwater</i></p>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/teamPhotos/benjamin2023.jpeg" width=50%>
+												<br>
+												<p><i>Benjamin Harrison</i></p>
 											</div>
 										</div>
 										<!-- advisor QA -->
 										<div class="row">
-											<div class="col-md-6" align="left"> <!-- Consuelo -->
+											<div class="col-md-6" align="left"> <!-- Emily -->
+												<p>
+													<b>What are you studying?</b><br>
+													Master's Degree Education - University of Lethbridge, Canada
+												</p>
+												<p>
+													<b>How did you become interested in computer science?</b><br>
+													I am interested in new innovations to help with student acheivement.
+												</p>
+												<p>
+													<b>What's something cool you've done with computer science?</b><br>
+													Coding 101 for PathLight Students in 2020.
+												</p>
+												<p>
+													<b>What are you hoping to do with computer science in the future?</b><br>
+													Sustainable Coding Course for High School Students offered every Summer
+												</p>
+											</div>
+											<div class="col-md-6" align="left"> <!-- Benjamin -->
 												<p>
 													<b>What are you studying?</b><br>
 													Master's Degree Education - University of Lethbridge, Canada
