--- a/belizeweb/SS2023/resources.html
+++ b/belizeweb/SS2023/resources.html
@@ -112,7 +112,7 @@
 										<a href="images/Lessons/04Week4-2.04.23-Blue.pdf" target="_blank">05 - Review - 2.04.23</a>
 									</li>
 									<li style="list-style: disc;">
-										<a href="images/Lessons/05Week5-2.11.23-Blue.pdf" target="_blank">06 -  - 2.11.23</a>
+										<a href="images/Lessons/05blue.pdf" target="_blank">06 -  - 2.11.23</a>
 									</li>
 									<li style="list-style: disc;">
 										<a href="images/Lessons/06Week62.25.23Blue.pdf" target="_blank">07 -  - 2.25.23</a>
