--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -173,9 +173,9 @@
 										</div>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/benjamin2023.jpeg" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/tanviSS23.jpeg" width=50%>
 												<br>
-												<p><i>Benjamin Harrison</i></p>
+												<p><i>Tanvi Gadamsetti</i></p>
 											</div>
 										</div>
 										<!-- advisor QA -->
@@ -183,37 +183,37 @@
 											<div class="col-md-6" align="left"> <!-- Emily -->
 												<p>
 													<b>What are you studying?</b><br>
-													Master's Degree Education - University of Lethbridge, Canada
+													Major: Computer Science Minor: Entrepreneurship and Innovation
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I am interested in new innovations to help with student acheivement.
+													I took a class in high school and enjoyed the creativity to build what I wanted!
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													Coding 101 for PathLight Students in 2020.
+													I coded a game similar to Angry Birds for a class which was fun!
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													Sustainable Coding Course for High School Students offered every Summer
+													I am hoping to work in FinTech (Finance Technology) as a software engineer, so I can work on projects that combine my passion of finance and technology! 
 												</p>
 											</div>
-											<div class="col-md-6" align="left"> <!-- Benjamin -->
+											<div class="col-md-6" align="left"> <!-- Tanvi -->
 												<p>
 													<b>What are you studying?</b><br>
-													Master's Degree Education - University of Lethbridge, Canada
+													Computer science with a minor in business 
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I am interested in new innovations to help with student acheivement.
+													I became interested in computer science by attending summer workshops where we got to program a video game character 
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													Coding 101 for PathLight Students in 2020.
+													I have created websites and programmed video game characters 
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													Sustainable Coding Course for High School Students offered every Summer
+													Hoping to create my own website or a personal blog 
 												</p>
 											</div>
 										</div>
