--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -166,9 +166,9 @@
 										<!-- advisor photos -->
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/emily750x1000_78R.jpg" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/joshuaSS23.jpg" width=50%>
 												<br>
-												<p><i>Emily Goldwater </i></p>
+												<p><i>Joshua Twumasi</i></p>
 											</div>
 										</div>
 										<div class="row">
@@ -178,24 +178,25 @@
 												<p><i>Tanvi Gadamsetti</i></p>
 											</div>
 										</div>
+									</div>
 										<!-- advisor QA -->
 										<div class="row">
-											<div class="col-md-6" align="left"> <!-- Emily -->
+											<div class="col-md-6" align="left"> <!-- Joshua -->
 												<p>
 													<b>What are you studying?</b><br>
-													Major: Computer Science Minor: Entrepreneurship and Innovation
+													Computer Science Major
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I took a class in high school and enjoyed the creativity to build what I wanted!
+													Cyberpunk movies led me to love computer science.
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I coded a game similar to Angry Birds for a class which was fun!
+													I recreated one of my favorite games, Pac-Man.
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I am hoping to work in FinTech (Finance Technology) as a software engineer, so I can work on projects that combine my passion of finance and technology! 
+													I am hoping to create an advanced data collection system for better decision-making.
 												</p>
 											</div>
 											<div class="col-md-6" align="left"> <!-- Tanvi -->
