--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -163,22 +163,19 @@
 									<!-- mentor photos -->
 									<h4 class="text-center">Advisor Spotlight</h4>
 									<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
-										<!-- advisor photos -->
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/joshuaSS23.jpg" width=50%>
-												<br>
+												<img class="shadow-lg" src="images/teamPhotos/joshuaSS23.jpg" height="350">
+												<br><br>
 												<p><i>Joshua Twumasi</i></p>
 											</div>
-										</div>
-										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/tanviSS23.jpeg" width=50%>
-												<br>
+												<img class="shadow-lg" src="images/teamPhotos/tanviSS23.jpeg"
+													 height="350">
+												<br><br>
 												<p><i>Tanvi Gadamsetti</i></p>
 											</div>
 										</div>
-									</div>
 										<!-- advisor QA -->
 										<div class="row">
 											<div class="col-md-6" align="left"> <!-- Joshua -->
