--- a/belizeweb/SS2023/resources.html
+++ b/belizeweb/SS2023/resources.html
@@ -86,7 +86,10 @@
 									</li>	
 									<li style="list-style: disc;">
 										<a href="images/Lessons/08green.pdf" target="_blank">09 -  - 3.25.23</a>
-									</li>			
+									</li>		
+									<li style="list-style: disc;">
+										<a href="images/Lessons/09week9green.pdf" target="_blank">10 -  - 4.1.23</a>
+									</li>		
 								</ul>
 							</section>
 
@@ -122,6 +125,10 @@
 									</li>	
 									<li style="list-style: disc;">
 										<a href="images/Lessons/08blue.pdf" target="_blank">09 -  - 3.25.23</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="images/Lessons/09week9blue.pdf" target="_blank">10 -  - 4.1.23</a>
+									</li>
 
 								
 									
