--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -90,12 +90,13 @@
 										</h4>
 										<p>
 											As we conclude the program, it is important for us to collect feedback to improve the program for upcoming years. We ask you please fill out the <a href="https://forms.gle/kb8HwJaakneKCGkk6">Post-Survey</a>!
+											Upon submitting the survey, students can enter a drawing to win a gift of appreciation 
 										</p>
 										<h4>
 											3. Certificates
 										</h4>
 										<p>
-											As a reminder, students are able to receive certification of completion once they have completed 75% of CodeHS. 
+											As a reminder, students are able to receive certification of completion once they have completed 75% of CodeHS provided they have attended at least 7 of the class sessions (attendance at bonus hours can be counted to make up for a missed lesson). Certificates will be distributed in the last couple of weeks of May.
 										</p>
 
 										<h4>4. Questions?</h4>
@@ -126,7 +127,7 @@
 										After our spotlight we went straight into our Final Project Showcases! It was great to see the projects all the students came up with, the creativity showed through each and everyone of them!	
 									</p>
 
-									<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+									<!-- <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
 										<div class="row">
 											<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTJE7NXul_pWTmcEZY_q56nWl2sL9lV7POwY-wOop5ZEsWEYzvNqtfuGWBGi5ye1IghnLon3To6zsFP/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 										</div>
@@ -143,7 +144,7 @@
 									</div>
 									<p>
 										 <a href="https://docs.google.com/presentation/d/1ly8B_mQcQqgx1AX9tySmS82K_KxQpwpfYyoNF99M9I0/edit#slide=id.g2093a4c32db_0_0"><b>Green Cohort</b></a>
-									</p>
+									</p> -->
 						
 
 
@@ -183,7 +184,7 @@
 												<p><i>Benjamin Harrison</i></p>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/"
+												<img class="shadow-lg" src="images/F78A758D-3870-486A-9451-0D97A859B087.JPG"
 													 height="350">
 												<br><br>
 												<p><i>Emily Goldwater</i></p>
